[tool.poetry]
name = "nicegui-pdf"
version = "0.0.1"
description = "A PDF viewer for nicegui based on pdf.js"
authors = ["David Peer <david.peer@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Repository = "https://github.com/peerdavid/nicegui_pdf"
Issues = "https://github.com/peerdavid/nicegui_pdf/issues"