[project]
name = "nicegui-pdf"
version = "0.0.2"
description = "A PDF viewer for nicegui based on pdf.js"
authors = [
  { name="David Peer", email="david.peer@outlook.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "nicegui>=2.14.1",
]

[project.urls]
Repository = "https://github.com/peerdavid/nicegui_pdf"
Issues = "https://github.com/peerdavid/nicegui_pdf/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["nicegui_pdf/"]

[tool.hatch.build.targets.sdist]
include = [
  "/nicegui_pdf/*",
]

[tool.hatch.build.targets.wheel.sources]
"src" = "nicegui_pdf"